--- a/desafios/desafio02/index.html
+++ b/desafios/desafio02/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-git 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoderHouse - JS 01</title>
-
+    <title>CoderHouse - JS 02</title>
 </head>
-
 <body style="text-align: center;">
-    <h1>Desafío 01</h1>
-    <h2>Suma de valores ingresados usando bucle while</h2>
+    <h1>Desafío 02</h1>
+    <h2>Promedio de Temperatura Sensados.</h2>
     <h2>finaliza cuando ingresamos un "0"</h2>
-    <script src="/desafios/desafio01/js/main.js"></script>    
+    <script src="/desafios/desafio02/js/funciones.js"></script>    
 </body>
-
 </html>
